[package]
name = "ssh-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
base64 = "0.21.6"
num-bigint = "0.4.4"
rand = "0.8.5"
sha2 = "0.10.8"
chacha20 = "0.9.1"
poly1305 = "0.8.0"
once_cell = "1.20.2"
hex = "0.4.3"
tokio-test = "0.4.4"
clap = { version = "4.5.23", features = ["derive"] }
